--- a/.github/workflows/gcpTerraformPipeline.yml
+++ b/.github/workflows/gcpTerraformPipeline.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}  # Set your project ID in secrets
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.gcpProjectId }}  # Set your project ID in secrets
+          credentials_json: ${{ secrets.gcpServiceAccountKey }}
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.4.5  # Set the Terraform version you need
+          terraform_version: 6.16.0  # Set the Terraform version you need
 
       - name: Terraform Init
         run: terraform init
