--- a/.github/workflows/gcpTerraformPipeline.yml
+++ b/.github/workflows/gcpTerraformPipeline.yml
@@ -26,10 +26,13 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        working-directory: ./testing creds
 
       - name: Terraform Plan
         run: terraform plan
+        working-directory: ./testing creds
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
+        working-directory: ./testing creds
         # Note: Consider removing -auto-approve if you want manual approval for apply
