--- a/.github/workflows/gcpTerraformPipeline.yml
+++ b/.github/workflows/gcpTerraformPipeline.yml
@@ -18,7 +18,7 @@ jobs:
           echo "$GOOGLE_CREDENTIALS" > ${HOME}/gcloud-key.json
           gcloud auth activate-service-account --key-file=${HOME}/gcloud-key.json
         env:
-          GOOGLE_CREDENTIALS: ${{ secrets.GCPSERVICEACCOUNTKEY }} 
+          GOOGLE_CREDENTIALS: ${{ env.GCPSERVICEACCOUNTKEY }} 
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
