--- a/.github/workflows/gcpTerraformPipeline.yml
+++ b/.github/workflows/gcpTerraformPipeline.yml
@@ -15,10 +15,10 @@ jobs:
 
       - name: Authenticate to Google Cloud
         run: |
-          echo "$GOOGLE_CREDENTIALS" > ${HOME}/gcloud-key.json
+          echo "$GCP_SERVICE_ACCOUNT_KEY" > ${HOME}/gcloud-key.json
           gcloud auth activate-service-account --key-file=${HOME}/gcloud-key.json
         env:
-          GOOGLE_CREDENTIALS: ${{ env.GCPSERVICEACCOUNTKEY }} 
+          GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.gcpServiceAccountKey }} 
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
