--- a/.github/workflows/gcpTerraformPipeline.yml
+++ b/.github/workflows/gcpTerraformPipeline.yml
@@ -13,12 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3 
 
-      - name: Authenticate to Google Cloud
-        run: |
-          echo "$GCP_SERVICE_ACCOUNT_KEY" > ${HOME}/gcloud-key.json
-          gcloud auth activate-service-account --key-file=${HOME}/gcloud-key.json
-        env:
-          GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }} 
+      - name: Set up Google Cloud credentials
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+           service_account_key: ${{ secrets.GCP_SA_KEY }}
+           project_id: ${{ secrets.GCP_PROJECT_ID }} 
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
