--- a/.github/workflows/gcpTerraformPipeline.yml
+++ b/.github/workflows/gcpTerraformPipeline.yml
@@ -29,6 +29,6 @@ jobs:
         working-directory: ./testing creds
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply -var-file=variables.tfvars -auto-approve
         working-directory: ./testing creds
         # Note: Consider removing -auto-approve if you want manual approval for apply
