--- a/.github/workflows/gcpTerraformPipeline.yml
+++ b/.github/workflows/gcpTerraformPipeline.yml
@@ -30,9 +30,9 @@ jobs:
         run: terraform init
         working-directory: ./testing creds
 
-      - name: Terrafrom refresh
-        run: terraform refresh
-        working-directory: ./testing creds
+      #- name: Terrafrom refresh
+       # run: terraform refresh
+        #working-directory: ./testing creds
 
       - name: Terraform plan
         run: terraform plan
